Pom configurations modification